[change] support for excluded targets in the sync mechanism (#196)
* build with excluded

* query with excluded

* changelog